--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,17 @@
 body {
     width: 550px;
     margin: auto;
-    background: #C3C3C3;
+    background: #D8E4FF;
+}
+
+table {
+    background-color: #A4BAB7;
 }
 
 h1 {
-    border-bottom: 1px solid black;
-     font-family: "Acme";
+    border-bottom: 1px solid #187795;
+    font-family: "Acme";
+    color: #187795;
 }
 
 .square {
@@ -14,10 +19,19 @@ h1 {
     width: 80px;    
     font-size: 45pt;
     text-align: center;
-     font-family: "Play";
+    font-family: "Play";
+    color: #35605A;
 }
 
 #message {
     font-size: 18pt;
      font-family: "Indie Flower"; 
+     color: #187795
+}
+
+#restart {
+    font-size: 18pt;
+    font-family: "Indie Flower"; 
+    text-decoration: none;
+    color: #5B3000;
 }
